@@ -69,6 +69,9 @@
                     { "name": "gtk-linux-slave-11", "platform": "gtk" },
 
                     { "name": "jsconly-linux-igalia-bot-1", "platform": "jsc-only" },
+                    { "name": "jsconly-linux-igalia-bot-2", "platform": "jsc-only" },
+                    { "name": "jsconly-linux-igalia-bot-3", "platform": "jsc-only" },
+                    { "name": "jsconly-linux-igalia-bot-4", "platform": "jsc-only" },
 
                     { "name": "wpe-linux-bot-1", "platform": "wpe" },
                     { "name": "wpe-linux-bot-2", "platform": "wpe" }
@@ -289,6 +292,21 @@
                       "slavenames": ["wincairo-1", "wincairo-2"]
                     },
                     {
+                      "name": "JSCOnly Linux AArch64 Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-aarch64-release",
+                      "platform": "jsc-only", "configuration": "release", "architectures": ["aarch64"],
+                      "slavenames": ["jsconly-linux-igalia-bot-2"]
+                    },
+                    {
+                      "name": "JSCOnly Linux ARMv7 Thumb2 Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-armv7-thumb2-release",
+                      "platform": "jsc-only", "configuration": "release", "architectures": ["armv7"],
+                      "slavenames": ["jsconly-linux-igalia-bot-3"]
+                    },
+                    {
+                      "name": "JSCOnly Linux ARMv7 Traditional Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-armv7-traditional-release",
+                      "platform": "jsc-only", "configuration": "release", "architectures": ["armv7"],
+                      "slavenames": ["jsconly-linux-igalia-bot-4"]
+                    },
+                    {
                       "name": "JSCOnly Linux MIPS32el Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-mips32el-release",
                       "platform": "jsc-only", "configuration": "release", "architectures": ["mips"],
                       "slavenames": ["jsconly-linux-igalia-bot-1"]
@@ -309,6 +327,7 @@
     "schedulers": [ { "type": "AnyBranchScheduler", "name": "trunk", "change_filter": "trunk_filter", "treeStableTimer": 45.0,
                       "builderNames": ["GTK Linux 32-bit Release", "GTK Linux 64-bit Release (Build)", "GTK Linux 64-bit Debug (Build)", "GTK Linux ARM Release",
                                        "GTK Linux 64-bit Release Debian Stable (Build)", "GTK Linux 64-bit Release Ubuntu LTS (Build)",
+                                       "JSCOnly Linux AArch64 Release", "JSCOnly Linux ARMv7 Thumb2 Release", "JSCOnly Linux ARMv7 Traditional Release",
                                        "JSCOnly Linux MIPS32el Release", "WinCairo 64-Bit Release", "WPE Linux 64-bit Release (Build)"]
                     },
                     { "type": "PlatformSpecificScheduler", "platform": "mac-highsierra", "branch": "trunk", "treeStableTimer": 45.0,
