@@ -1,3 +1,13 @@
+2018-02-02  Carlos Alberto Lopez Perez  <clopez@igalia.com>
+
+        re-add ARM JSCOnly bots on buildbot waterfall
+        https://bugs.webkit.org/show_bug.cgi?id=182428
+
+        Reviewed by Csaba Osztrogonác.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2018-02-02  Csaba Osztrogonác  <ossy@webkit.org>
 
         Remove ARM JSCOnly bots from buildbot waterfall
